--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.1.0"
+    "@astrojs/mdx": "^4.0.2",
+    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/svelte": "^7.0.1",
+    "@astrojs/tailwind": "^5.1.3",
+    "@astrojs/vercel": "^8.0.1",
+    "astro": "^5.1.0",
+    "svelte": "^5.15.0",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2"
   }
 }
